# hallmpay

./: Cargo.toml  LICENSE  README.md
apps/api/src/: bill.rs  gst.rs  main.rs  mcp.rs  tax.rs
apps/docs/: account-formats.md  bank-codes.md  card-bins.md  cross-border-qr.md  duitnow-acquirer-codes.md  duitnow-qr-research.md  fpx-reference.md  icon-inventory.md  index.html  paynet-developer-docs.md  resources.md  response-codes.md
changelog/: V.1.0-cli-mcp-design.md  V.1.1-cli-mcp-implementation.md
crates/config/src/: config.rs
crates/core/: Cargo.toml
crates/core/src/: client.rs  lib.rs
crates/model/src/: collection.rs  fpx_bank.rs  mod.rs
crates/openapi/: Cargo.toml
crates/openapi/data/: acquirers.json  banks.json  card-bins.json  cross-border-qr.json  ewallets.json  fpx-banks.json  ic-state-codes.json  phone-prefixes.json  states.json  transaction-codes.json
crates/openapi/data/response-codes/: fpx.json
crates/openapi/src/: config.rs  error.rs  main.rs
examples/: basic_usage.rs
modules/adapters/payment/src/: config.rs  events.rs
modules/hallmpay/crates/hallmpay-tax/src/: model.rs  sst.rs  tax.rs
modules/hallmpay/crates/paynet-client/: Cargo.toml
modules/hallmpay/crates/paynet-client/src/: account.rs  bank.rs  client.rs  customer.rs  error.rs
modules/hallmpay/src/: main.rs
modules/hallmpay/src/adapter/: config.rs  paynet_channel.rs  paynet_webhook.rs
modules/hallmpay/src/api/invoices/: mapping.rs  service.rs
modules/hallmpay/src/api_rest/: mod.rs  model.rs  openapi.rs  server.rs
modules/hallmpay/src/api_rest/files/: mod.rs  router.rs
modules/hallmpay/src/api_rest/invoices/: model.rs  router.rs
modules/hallmpay/src/api_rest/usage/: model.rs  router.rs
modules/hallmpay/src/clients/: http.rs
modules/hallmpay/src/model/: bank.rs  mod.rs
modules/hallmpay/src/routes/: mod.rs
modules/hallmpay/tests/: verification_test.rs
openapi/: openapi.json
src/: lib.rs
src/api/: bank.rs  cli.rs  mcp.rs
src/types/: payment.rs  tax.rs  transaction.rs
tests/: checksum_test.rs  client_test.rs
