[package]
name = "hallmPay"
version = "0.2.0"
edition = "2021"
description = "Malaysia Payment GateAway - support for DuitNow and FPX Integration"
license = "MIT"
repository = "https://github.com/haikalariffhalim/hallmpay"
homepage = "https://github.com/haikalariffhalim/hallmpay"
keywords = ["hallmpay", "payment", "fpx", "duitnow", "malaysia"]
categories = ["online payment", "web-apps", "rust", "axum", "scalar", "paynet.my"]
readme = "README.md"




[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full", "test-util"] }
scalar_api_reference = { version = "0.1.0", features = ["axum"] }


# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# Auth
jsonwebtoken = "10"

# Utils
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }



urlencoding = "2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP


url = "2"

rmcp = { version = "0.1", features = ["server", "macros", "transport-io"] }
dirs = "6"
toml = "0.8"
schemars = "0.8"

# OpenAPI
utoipa = "5"
utoipa-axum = "0.2"
utoipa-scalar = "0.3"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono"
] }

[dev-dependencies]



[[bin]]
name = "hallm-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "hallm-mcp"
path = "src/bin/mcp.rs"
