[package]
name = "hallmPay"
version = "0.2.0"
edition = "2021"
description = "Malaysia Payment GateAway - support for DuitNow and FPX Integration"
license = "MIT"
repository = "https://github.com/haikalariffhalim/hallmpay"
homepage = "https://github.com/haikalariffhalim/hallmpay"
keywords = ["hallmpay", "payment", "fpx", "duitnow", "malaysia"]
categories = ["online payment", "web-apps", "rust", "axum", "scalar", "paynet.my"]
readme = "README.md"




[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full", "test-util"] }
scalar_api_reference = { version = "0.1.0", features = ["axum"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.5", features = ["limit", "load-shed", "timeout"] }
tower-http = { version = "0.6", features = ["trace", "cors", "timeout", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
dotenvy = "0.15"
async-trait = "0.1"
thiserror = "^1"
convex = "0.9"
validator = { version = "0.20", features = ["derive"] }
jsonwebtoken = "9.3"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
sysinfo = "0.37"
num_cpus = "1.16"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-scalar = "0.3"
prometheus = "0.14"
once_cell = "1.20"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"


# Utils
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }

urlencoding = "2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP
url = "2"
rmcp = { version = "0.1", features = ["server", "macros", "transport-io"] }
dirs = "6"
toml = "0.8"
schemars = "0.8"
